--- a/nodes/WABTEC_PREPARED-STG_NX_EQUIPMENT_HISTORY_DELETE.yml
+++ b/nodes/WABTEC_PREPARED-STG_NX_EQUIPMENT_HISTORY_DELETE.yml
@@ -120,7 +120,7 @@ operation:
           columnCounter: 13b111fe-2ddc-4651-aa2a-c7ac27eb56d3
           stepCounter: 87224c92-d42a-45ba-a366-b9260a77367f
         config: {}
-        dataType: NUMBER(38,0)
+        dataType: TIME
         description: ""
         name: STR_TIME_ENTERED
         nullable: true
@@ -128,7 +128,7 @@ operation:
           - columnReferences:
               - columnCounter: a194e602-202f-420d-8013-ff3c67e86ad4
                 stepCounter: 7ec06bb4-c167-4fd8-b0b4-5dbd087b84fb
-            transform: ""
+            transform: TRY_TO_TIME(SUBSTR("NX_EQUIPMENT_HISTORY_DELETE"."STR_TIME_ENTERED", 1, 2) || ':' || SUBSTR("NX_EQUIPMENT_HISTORY_DELETE"."STR_TIME_ENTERED", 3, 2), 'HH:MM')
       - appliedColumnTests: {}
         columnReference:
           columnCounter: 4666b704-c59f-41a2-8d89-7300127abaf7
