--- a/nodes/WABTEC_PREPARED-STG_NX_SUPERTRIP_CHARGES.yml
+++ b/nodes/WABTEC_PREPARED-STG_NX_SUPERTRIP_CHARGES.yml
@@ -386,7 +386,7 @@ operation:
           columnCounter: 46adb6c8-e147-4117-beaa-a47c4a2e66b2
           stepCounter: e29e9ba4-ef8b-4c27-8d45-82f206679a09
         config: {}
-        dataType: NUMBER(38,0)
+        dataType: TIME
         description: ""
         name: STR_ENTRY_TIME_NUM
         nullable: true
@@ -394,13 +394,13 @@ operation:
           - columnReferences:
               - columnCounter: fcf016b2-b1d6-4ce6-8af8-0566982e6195
                 stepCounter: f24c78e8-f383-4fed-9f59-b60ce54470d0
-            transform: ""
+            transform: TRY_TO_TIME(SUBSTR("NX_SUPERTRIP_CHARGES"."STR_ENTRY_TIME_NUM", 1, 2) || ':' || SUBSTR("NX_SUPERTRIP_CHARGES"."STR_ENTRY_TIME_NUM", 3, 2), 'HH:MM')
       - appliedColumnTests: {}
         columnReference:
           columnCounter: 1ad6812e-8ffe-4ad6-a48d-9c6bab7ba4eb
           stepCounter: e29e9ba4-ef8b-4c27-8d45-82f206679a09
         config: {}
-        dataType: NUMBER(38,0)
+        dataType: TIME
         description: ""
         name: STR_TIME_MODIFIED_NUM
         nullable: true
@@ -408,7 +408,7 @@ operation:
           - columnReferences:
               - columnCounter: 9c2ed6f5-e697-481a-b821-0538800651d7
                 stepCounter: f24c78e8-f383-4fed-9f59-b60ce54470d0
-            transform: ""
+            transform: TRY_TO_TIME(SUBSTR("NX_SUPERTRIP_CHARGES"."STR_TIME_MODIFIED_NUM", 1, 2) || ':' || SUBSTR("NX_SUPERTRIP_CHARGES"."STR_TIME_MODIFIED_NUM", 3, 2), 'HH:MM')
       - appliedColumnTests: {}
         columnReference:
           columnCounter: 07fd7fdc-bbe5-41b3-89ad-d8ed4b1765e5
