--- a/nodes/WABTEC_PREPARED-STG_NX_SUPERTRIP_DELETES.yml
+++ b/nodes/WABTEC_PREPARED-STG_NX_SUPERTRIP_DELETES.yml
@@ -36,7 +36,7 @@ operation:
           columnCounter: 38fb153a-5ad6-44eb-b0ba-3dd7acd326f4
           stepCounter: 87775c86-a7ec-4d4e-8f95-86ec95aaea5c
         config: {}
-        dataType: NUMBER(38,0)
+        dataType: TIME
         description: ""
         name: DELETE_TIME
         nullable: true
@@ -44,7 +44,7 @@ operation:
           - columnReferences:
               - columnCounter: 653d51df-e13f-4759-95c9-081d8e9117a8
                 stepCounter: 5b6fc5e1-3211-40f6-aa3f-ddb97b14e320
-            transform: ""
+            transform: TRY_TO_TIME(SUBSTR("NX_SUPERTRIP_DELETES"."DELETE_TIME", 1, 2) || ':' || SUBSTR("NX_SUPERTRIP_DELETES"."DELETE_TIME", 3, 2), 'HH:MM')
       - appliedColumnTests: {}
         columnReference:
           columnCounter: ea152c15-8800-469b-a66c-8f1014452ae8
