--- a/nodes/WABTEC_PREPARED-STG_NX_SUPERTRIP_PARENT_CALCS.yml
+++ b/nodes/WABTEC_PREPARED-STG_NX_SUPERTRIP_PARENT_CALCS.yml
@@ -372,7 +372,7 @@ operation:
           columnCounter: d2b66d55-441b-4c08-8be7-2e78c20edf84
           stepCounter: f7902862-f0ba-49d6-9ff9-657d1a11936f
         config: {}
-        dataType: NUMBER(38,0)
+        dataType: TIME
         description: ""
         name: COMPLETE_TIME
         nullable: true
@@ -428,7 +428,7 @@ operation:
           columnCounter: 5bb2c15c-37c7-4484-9117-93f6214956fc
           stepCounter: f7902862-f0ba-49d6-9ff9-657d1a11936f
         config: {}
-        dataType: NUMBER(38,0)
+        dataType: DATE
         description: ""
         name: CONST_PLACE_DATE
         nullable: true
@@ -442,7 +442,7 @@ operation:
           columnCounter: 8c2c6114-1783-45f5-9afc-93813a4d17c1
           stepCounter: f7902862-f0ba-49d6-9ff9-657d1a11936f
         config: {}
-        dataType: NUMBER(38,0)
+        dataType: TIME
         description: ""
         name: CONST_PLACE_TIME
         nullable: true
@@ -526,7 +526,7 @@ operation:
           columnCounter: 1c2e5dc0-ac0c-4c70-b27b-0cc11fd517d1
           stepCounter: f7902862-f0ba-49d6-9ff9-657d1a11936f
         config: {}
-        dataType: VARCHAR(16777216)
+        dataType: DATE
         description: ""
         name: DATE_MODIFIED
         nullable: true
@@ -778,7 +778,7 @@ operation:
           columnCounter: 6522f270-55bd-43af-9dd5-3b18da03157b
           stepCounter: f7902862-f0ba-49d6-9ff9-657d1a11936f
         config: {}
-        dataType: NUMBER(38,0)
+        dataType: TIME
         description: ""
         name: EMPTY_RAILROAD_TIME
         nullable: true
@@ -820,7 +820,7 @@ operation:
           columnCounter: 6670f008-dd25-4056-8827-abd998cfb950
           stepCounter: f7902862-f0ba-49d6-9ff9-657d1a11936f
         config: {}
-        dataType: VARCHAR(16777216)
+        dataType: DATE
         description: ""
         name: ENTRY_DATE_NUM
         nullable: true
@@ -834,7 +834,7 @@ operation:
           columnCounter: 3963b0bc-0006-47d0-9b83-0fb60520974f
           stepCounter: f7902862-f0ba-49d6-9ff9-657d1a11936f
         config: {}
-        dataType: VARCHAR(16777216)
+        dataType: TIME
         description: ""
         name: ENTRY_TIME_NUM
         nullable: true
@@ -1184,7 +1184,7 @@ operation:
           columnCounter: f7733117-6280-4e77-8088-0a8b9fa3f96f
           stepCounter: f7902862-f0ba-49d6-9ff9-657d1a11936f
         config: {}
-        dataType: VARCHAR(16777216)
+        dataType: DATE
         description: ""
         name: INTERCHANGE_DATE
         nullable: true
@@ -1198,7 +1198,7 @@ operation:
           columnCounter: c4ec0010-9c9a-41c1-86f3-e27346bb211f
           stepCounter: f7902862-f0ba-49d6-9ff9-657d1a11936f
         config: {}
-        dataType: NUMBER(38,0)
+        dataType: DATE
         description: ""
         name: INTO_BAD_ORDER_DATE
         nullable: true
@@ -1212,7 +1212,7 @@ operation:
           columnCounter: 9fc18508-1c43-44f5-b2cf-fd0ecc0452b9
           stepCounter: f7902862-f0ba-49d6-9ff9-657d1a11936f
         config: {}
-        dataType: NUMBER(38,0)
+        dataType: TIME
         description: ""
         name: INTO_BAD_ORDER_TIME
         nullable: true
@@ -1226,7 +1226,7 @@ operation:
           columnCounter: 4d8a6b48-5ba5-4f40-bc9a-6d4b1b49825b
           stepCounter: f7902862-f0ba-49d6-9ff9-657d1a11936f
         config: {}
-        dataType: NUMBER(38,0)
+        dataType: DATE
         description: ""
         name: INTO_STORAGE_DATE
         nullable: true
@@ -1240,7 +1240,7 @@ operation:
           columnCounter: 29e00357-5888-40b0-af59-fb3e0f0f8bc8
           stepCounter: f7902862-f0ba-49d6-9ff9-657d1a11936f
         config: {}
-        dataType: NUMBER(38,0)
+        dataType: TIME
         description: ""
         name: INTO_STORAGE_TIME
         nullable: true
@@ -1464,7 +1464,7 @@ operation:
           columnCounter: e8459f2a-bafb-4bab-b49b-88680e8ea636
           stepCounter: f7902862-f0ba-49d6-9ff9-657d1a11936f
         config: {}
-        dataType: NUMBER(38,0)
+        dataType: DATE
         description: ""
         name: OFFLINE_TRIP_END_DATE
         nullable: true
@@ -1478,7 +1478,7 @@ operation:
           columnCounter: 7197b3ff-c9ba-4a3d-9fdd-82d5fac74341
           stepCounter: f7902862-f0ba-49d6-9ff9-657d1a11936f
         config: {}
-        dataType: NUMBER(38,0)
+        dataType: TIME
         description: ""
         name: OFFLINE_TRIP_END_TIME
         nullable: true
@@ -1646,7 +1646,7 @@ operation:
           columnCounter: 98279500-4a92-4331-83bc-48c1437bc0d1
           stepCounter: f7902862-f0ba-49d6-9ff9-657d1a11936f
         config: {}
-        dataType: NUMBER(38,0)
+        dataType: DATE
         description: ""
         name: OUT_OF_BAD_ORDER_DATE
         nullable: true
@@ -1660,7 +1660,7 @@ operation:
           columnCounter: 7de1eccb-75e5-44cb-84a1-1c6937ab9f38
           stepCounter: f7902862-f0ba-49d6-9ff9-657d1a11936f
         config: {}
-        dataType: NUMBER(38,0)
+        dataType: TIME
         description: ""
         name: OUT_OF_BAD_ORDER_TIME
         nullable: true
@@ -1674,7 +1674,7 @@ operation:
           columnCounter: 6b60a154-4985-4f76-ab1a-c409c0192667
           stepCounter: f7902862-f0ba-49d6-9ff9-657d1a11936f
         config: {}
-        dataType: NUMBER(38,0)
+        dataType: DATE
         description: ""
         name: OUT_OF_STORAGE_DATE
         nullable: true
@@ -1688,7 +1688,7 @@ operation:
           columnCounter: 64ea0f71-e49c-45ac-bb64-097fdf5225b6
           stepCounter: f7902862-f0ba-49d6-9ff9-657d1a11936f
         config: {}
-        dataType: NUMBER(38,0)
+        dataType: TIME
         description: ""
         name: OUT_OF_STORAGE_TIME
         nullable: true
@@ -1730,7 +1730,7 @@ operation:
           columnCounter: 9d5c0e7d-c19f-48bd-92c9-34359c4b46ec
           stepCounter: f7902862-f0ba-49d6-9ff9-657d1a11936f
         config: {}
-        dataType: NUMBER(38,0)
+        dataType: TIME
         description: ""
         name: PICKUP_TIME
         nullable: true
@@ -1744,7 +1744,7 @@ operation:
           columnCounter: efaf583a-35c2-4754-b036-2aa5e0674c9f
           stepCounter: f7902862-f0ba-49d6-9ff9-657d1a11936f
         config: {}
-        dataType: VARCHAR(16777216)
+        dataType: DATE
         description: ""
         name: PLACEMENT_DATE
         nullable: true
@@ -1814,7 +1814,7 @@ operation:
           columnCounter: 20ebebff-797d-43d7-9847-e1db39775e4c
           stepCounter: f7902862-f0ba-49d6-9ff9-657d1a11936f
         config: {}
-        dataType: NUMBER(38,0)
+        dataType: TIME
         description: ""
         name: PLACEMENT_TIME
         nullable: true
@@ -1968,7 +1968,7 @@ operation:
           columnCounter: 596cd5f3-7622-4794-8f50-1f424e20a15d
           stepCounter: f7902862-f0ba-49d6-9ff9-657d1a11936f
         config: {}
-        dataType: NUMBER(38,0)
+        dataType: TIME
         description: ""
         name: RR_OUTBOUND_TIME
         nullable: true
@@ -1996,7 +1996,7 @@ operation:
           columnCounter: fc7a2984-27d3-42d3-99ae-41bd48f9b55d
           stepCounter: f7902862-f0ba-49d6-9ff9-657d1a11936f
         config: {}
-        dataType: NUMBER(38,0)
+        dataType: DATE
         description: ""
         name: RELEASE_CONSTRUCTIVE_PLACE_DATE
         nullable: true
@@ -2024,7 +2024,7 @@ operation:
           columnCounter: d72a900b-cf7c-4e00-83bb-32bfa0c72f22
           stepCounter: f7902862-f0ba-49d6-9ff9-657d1a11936f
         config: {}
-        dataType: NUMBER(38,0)
+        dataType: TIME
         description: ""
         name: RELEASE_CONSTRUCTIVE_PLACE_TIME
         nullable: true
@@ -2038,7 +2038,7 @@ operation:
           columnCounter: f36f0a50-2037-47e8-a60c-20adda3be3a2
           stepCounter: f7902862-f0ba-49d6-9ff9-657d1a11936f
         config: {}
-        dataType: VARCHAR(16777216)
+        dataType: DATE
         description: ""
         name: RELEASE_DATE
         nullable: true
@@ -2108,7 +2108,7 @@ operation:
           columnCounter: 30c77c3e-a400-40b8-afa2-a6b4e000c4ee
           stepCounter: f7902862-f0ba-49d6-9ff9-657d1a11936f
         config: {}
-        dataType: NUMBER(38,0)
+        dataType: TIME
         description: ""
         name: RELEASE_TIME
         nullable: true
@@ -2122,7 +2122,7 @@ operation:
           columnCounter: 41658653-882b-4c95-b777-eb9c991d3ca6
           stepCounter: f7902862-f0ba-49d6-9ff9-657d1a11936f
         config: {}
-        dataType: VARCHAR(16777216)
+        dataType: DATE
         description: ""
         name: REVENUE_DATE
         nullable: true
@@ -2682,7 +2682,7 @@ operation:
           columnCounter: 1c70d57b-6e76-48d9-9cdd-180a83b1cb85
           stepCounter: f7902862-f0ba-49d6-9ff9-657d1a11936f
         config: {}
-        dataType: NUMBER(38,0)
+        dataType: TIME
         description: ""
         name: TIME_MODIFIED
         nullable: true
@@ -2696,7 +2696,7 @@ operation:
           columnCounter: b145405b-c7ad-466e-a448-bd010577f956
           stepCounter: f7902862-f0ba-49d6-9ff9-657d1a11936f
         config: {}
-        dataType: NUMBER(38,0)
+        dataType: TIME
         description: ""
         name: TIME_IN_RR_CONTROL_HOURS
         nullable: true
@@ -2710,7 +2710,7 @@ operation:
           columnCounter: e153fb3b-889c-477a-b954-c458058ac180
           stepCounter: f7902862-f0ba-49d6-9ff9-657d1a11936f
         config: {}
-        dataType: NUMBER(38,0)
+        dataType: TIME
         description: ""
         name: TIMES_WEIGHED_EMPTY
         nullable: true
@@ -2724,7 +2724,7 @@ operation:
           columnCounter: 56d5684b-f5e7-4cd0-857c-a69a55ebe5ab
           stepCounter: f7902862-f0ba-49d6-9ff9-657d1a11936f
         config: {}
-        dataType: NUMBER(38,0)
+        dataType: TIME
         description: ""
         name: TIMES_WEIGHED_LOADED
         nullable: true
@@ -2878,7 +2878,7 @@ operation:
           columnCounter: af21c637-d28c-43de-9620-777a796bcd93
           stepCounter: f7902862-f0ba-49d6-9ff9-657d1a11936f
         config: {}
-        dataType: NUMBER(38,0)
+        dataType: TIME
         description: ""
         name: TOTAL_TIME_OFFLINE
         nullable: true
@@ -2892,7 +2892,7 @@ operation:
           columnCounter: bea63158-3789-4746-876f-c32a3144749b
           stepCounter: f7902862-f0ba-49d6-9ff9-657d1a11936f
         config: {}
-        dataType: NUMBER(38,0)
+        dataType: TIME
         description: ""
         name: TOTAL_TIME_ONLINE
         nullable: true
@@ -2920,7 +2920,7 @@ operation:
           columnCounter: f12122c7-6c7e-4f6c-8cd3-e160b223394f
           stepCounter: f7902862-f0ba-49d6-9ff9-657d1a11936f
         config: {}
-        dataType: VARCHAR(16777216)
+        dataType: DATE
         description: ""
         name: TRAFFIC_DATE
         nullable: true
@@ -2962,7 +2962,7 @@ operation:
           columnCounter: 6a35bc57-7d72-4603-81da-22e0e7c99951
           stepCounter: f7902862-f0ba-49d6-9ff9-657d1a11936f
         config: {}
-        dataType: VARCHAR(16777216)
+        dataType: DATE
         description: ""
         name: TRIP_BEGIN_DATE
         nullable: true
@@ -3032,7 +3032,7 @@ operation:
           columnCounter: 07ed518b-e6b5-4077-ba24-daadbb34763b
           stepCounter: f7902862-f0ba-49d6-9ff9-657d1a11936f
         config: {}
-        dataType: NUMBER(38,0)
+        dataType: TIME
         description: ""
         name: TRIP_BEGIN_TIME
         nullable: true
@@ -3060,7 +3060,7 @@ operation:
           columnCounter: 4dd7e1c8-42bd-4da5-b7bf-90bde7c2577d
           stepCounter: f7902862-f0ba-49d6-9ff9-657d1a11936f
         config: {}
-        dataType: VARCHAR(16777216)
+        dataType: DATE
         description: ""
         name: TRIP_END_DATE
         nullable: true
@@ -3130,7 +3130,7 @@ operation:
           columnCounter: 42621682-bded-4271-bfce-b5f354f2e496
           stepCounter: f7902862-f0ba-49d6-9ff9-657d1a11936f
         config: {}
-        dataType: NUMBER(38,0)
+        dataType: TIME
         description: ""
         name: TRIP_END_TIME
         nullable: true
@@ -3194,7 +3194,7 @@ operation:
           - columnReferences:
               - columnCounter: 89606d06-614d-4b5f-8f38-eae6d75d846c
                 stepCounter: 5e01994d-7a43-4337-bf30-938e5412c9a6
-            transform: TRY_TO_DATE("STG_NX_SUPERTRIP_PARENT"."WAYBILL_DATE",'YYYYMMDD')
+            transform: ""
       - appliedColumnTests: {}
         columnReference:
           columnCounter: ab746354-80bd-4f1e-a6b1-635977cea04a
