--- a/nodes/WABTEC_PREPARED-STG_REVENUE_FILE_DELETES.yml
+++ b/nodes/WABTEC_PREPARED-STG_REVENUE_FILE_DELETES.yml
@@ -50,7 +50,7 @@ operation:
           columnCounter: de273aec-1988-46ef-bc99-bcc746424f84
           stepCounter: 78e3380a-2770-422c-82a4-129dfecf9c64
         config: {}
-        dataType: NUMBER(38,0)
+        dataType: TIME
         description: ""
         name: DELETE_TIME
         nullable: true
@@ -58,7 +58,7 @@ operation:
           - columnReferences:
               - columnCounter: df7a8a2a-d277-44a9-90bb-d8d00424aae3
                 stepCounter: 40f257d9-5fa4-4674-8340-ef4e626d3f63
-            transform: ""
+            transform: TRY_TO_TIME(SUBSTR("REVENUE_FILE_DELETES"."DELETE_TIME", 1, 2) || ':' || SUBSTR("REVENUE_FILE_DELETES"."DELETE_TIME", 3, 2), 'HH:MM')
       - appliedColumnTests: {}
         columnReference:
           columnCounter: 9c2d9271-3a17-435e-bf8b-e58175e848a3
